# bigml-hs

./: README.md  bigml-hs.cabal  stack.yaml
src/: BigML.hs
src/BigML/: Types.hs  WebUtils.hs
test/src/: Main.hs
