name:                bigml-hs
version:             0.1.0.0
synopsis:            Haskell bindings to the BigML REST API
description:         Please see README.md
homepage:            http://github.com/creswick/bigml-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
copyright:           2016 Rogan Creswick
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BigML
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       async,
                       bytestring,
                       http-client,
                       http-client-tls,
                       http-conduit,
                       http-conduit-browser

  default-language:    Haskell2010

test-suite bigml-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bigml-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/creswick/bigml-hs
