name:                bigml-hs
version:             0.1.0.0
synopsis:            Haskell bindings to the BigML REST API
description:         Please see README.md
homepage:            http://github.com/creswick/bigml-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
copyright:           2016 Rogan Creswick
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BigML
                       BigML.Types
                       BigML.WebUtils
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       async,
                       bytestring,
                       HsOpenSSL                 >= 0.10.5 && < 0.12,
                       http-client               >= 0.3.3.2,
                       http-client-tls,
                       http-client-openssl       >= 0.2.0.0,
                       http-types                >= 0.8,
                       network-uri,
                       resourcet,
                       mtl,
                       time,
                       text

  default-language:    Haskell2010

test-suite bigml-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/src
  main-is:             Main.hs
  build-depends:       base,
                       bigml-hs,
                       text,
                       HUnit,
                       QuickCheck,
                       filepath,
                       quickcheck-instances,
                       containers,
                       tasty,
                       tasty-quickcheck,
                       tasty-hunit,
                       tasty-ant-xml

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/creswick/bigml-hs
